layout bugs

--- a/less/base.less
+++ b/less/base.less
@@ -108,6 +108,10 @@
   color: @wiz-bar-color;
 }
 
+.highed-chart-template-container {
+  padding:20px;
+}
+
 @import "editor.style.less";
 @import "icon.less";
 @import "dimmer.less";
