--- a/less/chartpreview.less
+++ b/less/chartpreview.less
@@ -7,7 +7,11 @@
     left:2px;
     margin:4px;
 
+    font-size: 16px;
+
     text-align: center;
+
+    transform:rotate(-90deg);
 
     //border:@border-main;
     //background:@background-main;
